[gd_scene load_steps=22 format=3 uid="uid://d3r5ujcawxlbt"]

[ext_resource type="Texture2D" uid="uid://chrooromfclmq" path="res://images/isometric_tiles.png" id="1_fof8m"]
[ext_resource type="Script" path="res://src/main.gd" id="1_xpy6d"]
[ext_resource type="Shader" path="res://images/stars.gdshader" id="2_11jy7"]
[ext_resource type="Theme" uid="uid://dx0iaf1bhus87" path="res://images/grid_theme.tres" id="3_0bld2"]
[ext_resource type="Texture2D" uid="uid://bprhcmc03hmut" path="res://icon.svg" id="4_hs85w"]
[ext_resource type="Texture2D" uid="uid://du0l2tccn6105" path="res://images/tile_top.png" id="4_mx3h1"]
[ext_resource type="Shader" path="res://images/dissolve.gdshader" id="4_uuii4"]
[ext_resource type="Script" path="res://src/player.gd" id="5_42piq"]
[ext_resource type="Texture2D" uid="uid://dyv2q6q0f16kw" path="res://images/tile_side1.png" id="6_cw8p8"]
[ext_resource type="Texture2D" uid="uid://chttj8webo1xj" path="res://images/tile_side2.png" id="7_cemrk"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_gq6v0"]
noise_type = 0
frequency = 0.35

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_5w73u"]
noise = SubResource("FastNoiseLite_gq6v0")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2y8sw"]
shader = ExtResource("2_11jy7")
shader_parameter/resolution = Vector2(1152, 648)
shader_parameter/density = 40.0
shader_parameter/speed_x = -3.0
shader_parameter/speed_y = -0.999999
shader_parameter/layers = 5.0
shader_parameter/noise_texture = SubResource("NoiseTexture2D_5w73u")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_popd8"]
texture = ExtResource("1_fof8m")
texture_region_size = Vector2i(96, 96)
0:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0

[sub_resource type="TileSet" id="TileSet_ew7tj"]
tile_shape = 1
tile_layout = 5
tile_size = Vector2i(96, 48)
sources/3 = SubResource("TileSetAtlasSource_popd8")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_nlnlk"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_dwsuv"]
noise = SubResource("FastNoiseLite_nlnlk")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uwjkx"]
shader = ExtResource("4_uuii4")
shader_parameter/dissolve_value = 1.0
shader_parameter/burn_size = 0.32
shader_parameter/burn_color = Color(0.654902, 0.941176, 0.439216, 1)
shader_parameter/dissolve_texture = SubResource("NoiseTexture2D_dwsuv")

[sub_resource type="Animation" id="Animation_x6gnx"]
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/dissolve_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_23loi"]
resource_name = "dissolve"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/dissolve_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ggbfa"]
_data = {
"RESET": SubResource("Animation_x6gnx"),
"dissolve": SubResource("Animation_23loi")
}

[node name="Main" type="Node2D"]
script = ExtResource("1_xpy6d")

[node name="Stars" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_2y8sw")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_ew7tj")

[node name="CellToDissolve2" type="Sprite2D" parent="."]
visible = false
y_sort_enabled = true
material = SubResource("ShaderMaterial_uwjkx")
texture = ExtResource("6_cw8p8")
offset = Vector2(-24, 37)

[node name="AnimationPlayer" type="AnimationPlayer" parent="CellToDissolve2"]
libraries = {
"": SubResource("AnimationLibrary_ggbfa")
}

[node name="CellToDissolve3" type="Sprite2D" parent="."]
visible = false
y_sort_enabled = true
material = SubResource("ShaderMaterial_uwjkx")
texture = ExtResource("7_cemrk")
offset = Vector2(24, 36)

[node name="AnimationPlayer" type="AnimationPlayer" parent="CellToDissolve3"]
libraries = {
"": SubResource("AnimationLibrary_ggbfa")
}

[node name="CellToDissolve4" type="Sprite2D" parent="."]
visible = false
y_sort_enabled = true
material = SubResource("ShaderMaterial_uwjkx")
texture = ExtResource("1_fof8m")
hframes = 4
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="CellToDissolve4"]
libraries = {
"": SubResource("AnimationLibrary_ggbfa")
}

[node name="CellToDissolve" type="Sprite2D" parent="."]
visible = false
y_sort_enabled = true
material = SubResource("ShaderMaterial_uwjkx")
texture = ExtResource("4_mx3h1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CellToDissolve"]
libraries = {
"": SubResource("AnimationLibrary_ggbfa")
}

[node name="MouseHover" type="Polygon2D" parent="."]
visible = false
color = Color(1, 0.266667, 1, 0.494118)
polygon = PackedVector2Array(-48, 0, 0, -24, 48, 0, 0, 24)

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_0bld2")

[node name="PlayerTurn" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -88.5
offset_top = 25.0
offset_right = 88.5
offset_bottom = 70.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "Player 1 Turn"

[node name="Player1" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_hs85w")
script = ExtResource("5_42piq")

[node name="Player2" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_hs85w")
script = ExtResource("5_42piq")

[node name="Player3" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_hs85w")
script = ExtResource("5_42piq")

[node name="Player4" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_hs85w")
script = ExtResource("5_42piq")

[node name="Options" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Options"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 230.0
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 500

[node name="VBoxContainer" type="VBoxContainer" parent="Options/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="MoveBtn" type="Button" parent="Options/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Move Piece"

[connection signal="button_up" from="Options/MarginContainer/VBoxContainer/MoveBtn" to="." method="_on_move_btn_button_up"]
